fix import error of Rlib GWAutils

--- a/rlibs/GWAutils/html/00Index.html
+++ b/rlibs/GWAutils/html/00Index.html
@@ -23,7 +23,7 @@
 <tr><td style="width: 25%;"><a href="aggregateIndices.html">aggregateIndices</a></td>
 <td>Calculate water / wetness probability</td></tr>
 <tr><td style="width: 25%;"><a href="getWaterMask.html">getWaterMask</a></td>
-<td>A Cat Function</td></tr>
+<td>Water detection</td></tr>
 <tr><td style="width: 25%;"><a href="getWetMask.html">getWetMask</a></td>
 <td>Wetness detection</td></tr>
 <tr><td style="width: 25%;"><a href="rescale01.html">rescale01</a></td>
