--- a/rlibs/GWAutils/html/00Index.html
+++ b/rlibs/GWAutils/html/00Index.html
@@ -24,10 +24,12 @@
 <td>Calculate water / wetness probability</td></tr>
 <tr><td style="width: 25%;"><a href="getWaterMask.html">getWaterMask</a></td>
 <td>Water detection</td></tr>
+<tr><td style="width: 25%;"><a href="getWaterMask_SAR.html">getWaterMask_SAR</a></td>
+<td>Water detection SAR based</td></tr>
 <tr><td style="width: 25%;"><a href="getWetMask.html">getWetMask</a></td>
 <td>Wetness detection</td></tr>
-<tr><td style="width: 25%;"><a href="rescale01.html">rescale01</a></td>
-<td>A Cat Function</td></tr>
+<tr><td style="width: 25%;"><a href="getWetMask_SAR.html">getWetMask_SAR</a></td>
+<td>Wetness detection SAR based</td></tr>
 <tr><td style="width: 25%;"><a href="sigmoid.html">sigmoid</a></td>
 <td>Sigmoid</td></tr>
 <tr><td style="width: 25%;"><a href="sigmoid01.html">sigmoid01</a></td>
